<resources>
    <string name="app_name">TankLevelMonitor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_qr">Scan QR</string>
    <string name="settings">Settings</string>
    <string name="scan_wifi_devices">Scan Wifi Devices</string>
    <string name="please_enable_wifi_and_location">Please Enable Wifi and Location.</string>
    <string name="submit">Submit</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="ssid">SSID</string>
    <string name="hotspot_settings">Hotspot Settings (Optional)</string>
    <string name="router_settings">Router Settings</string>
    <string name="enter_number">Enter Number</string>
    <string name="tank_full_depth_cm">Tank Full Depth (cm)</string>
    <string name="tank_empty_depth_cm">Tank Empty Depth (cm)</string>
    <string name="level_settings">Level Settings</string>
    <string name="skip">Skip</string>
    <string name="updates_will_be_sent_to_online_database">Updates will be sent to online database</string>
    <string name="device_type_image">Device Type Image</string>
    <string name="select_device_type">Select Device Type</string>
    <string name="dashboard">Dashboard</string>
    <string name="devices">Devices</string>
    <string name="the_app_needs_some_permissions">The app needs some permissions from you to function properly, press continue to grant permissions.</string>
    <string name="header_image">Header Image</string>
    <string name="continueText">Continue</string>
    <string name="add_a_device">Add a device</string>
    <string name="no_devices_are_set_up">No devices are set up.</string>
    <string name="please_scan_the_qr_code_from_your_device">Please Scan the QR Code from your device.</string>
    <string name="tank_level_monitor">Tank Level Monitor</string>
    <string name="connection_mode">Connection Mode</string>
    <string name="timestamp">Timestamp:</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="tank_monitor">Tank Monitor</string>
    <string name="smart_switch">Smart Switch</string>
    <string name="no_updates_from_online_database">No updates from online database.</string>
    <string name="no_active_network">No Active Network.</string>
    <string name="internet_connected">Internet Connected.</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="space">\" \"</string>
    <string name="sync_pending">Sync Pending by device.</string>
    <string name="connected_to_database">Connected to online database.</string>
    <string name="getting_updates_from_device">Getting updates from smart device.</string>
    <string name="waiting_for_connection">Waiting for a connection</string>
    <string name="error_in_sending_data">Error in sending data.</string>
    <string name="switch_is_linked_to">Switch is linked to:</string>
    <string name="smart_switch_device">Smart Switch Device</string>
    <string name="click_to_turn_off">Click to turn off.</string>
    <string name="do_you_want_to_connect_to_smart_device_directly">Do you want to connect to smart device directly?</string>
    <string name="connect">Connect</string>
</resources>